samples/_failures_safe/1761278213_c79d0c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0c282bd.c: In function ‘main’:
./samples/SAFE/__tmp_a0c282bd.c:159:9: error: expected declaration or statement at end of input
  159 |         print_token_type(tokens[i].type);
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a0c282bd.c:159:9: error: expected declaration or statement at end of input
